# mars-colonization-specialist

./: .dockerignore  .gitignore  .mars_mcp_runtime.sqlite3  Dockerfile  README.md  conversation_gemini.md  docker-compose.yml  issue_open.md  mars_plan.py  multi_agent_architecture.md  peer to peer.md  phase-9a-complete.md  pyproject.toml  pyrightconfig.json  requirements-dev.lock.txt  test_output.txt  your_script.py
.codacy/: codacy.yaml
.github/workflows/: ci.yml
configs/: baseline.toml  knowledge_release_policy.toml
data/processed/: planner-soak-ci.json
docs/: ci-gates.md  coding-standards.md  dependency-locking.md  phase1-knowledge-foundation.md  phase2-core-reasoning-kernel.md  phase3-first-specialist-modules.md  phase4-orchestrator-and-mission-planning.md  phase5-simulation-generation-pipeline.md  phase6-governance-and-release-hardening.md  phase7-mcp-packaging-adapter.md  phase8-transport-auth-observability-scope.md  phase9b-operator-runbook-v0.md  phase9b-week1-telemetry-foundation.md  reproducibility-policy.md
scripts/: check.ps1  docker-build.ps1  docker-run.ps1  lock.ps1  setup.ps1  soak-planner.ps1  soak_planner.py
src/mars_agent/: __init__.py  config.py  dashboard_app.py  randomness.py
src/mars_colonization_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/integration/: test_correlation_fragment_live.py
tests/unit/: test_audit_export.py  test_benchmark_harness.py  test_central_planner.py  test_config_schema.py  test_coupling_checker.py  test_dashboard_app.py  test_global_validation_gate.py  test_governance_gate.py  test_import.py  (+28 more)
(+63 files in other folders)
