[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mars-colonization-agent"
version = "0.1.0"
description = "Mars Colonization Preparation Specialist - Phase 0 baseline"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Mars Team" }]
dependencies = [
  "fastapi>=0.115.0",
  "jinja2>=3.1.4",
  "mcp>=1.0",
  "pydantic>=2.0",
  "openai>=1.0.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mars_agent = [
  "web/templates/**/*.html",
  "web/static/css/*.css",
  "web/static/js/*.js",
]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --maxfail=1"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
pretty = true
mypy_path = "src"
